# TopEquations

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HEARTBEAT.md  LICENSE  README.md  SECURITY.md  TOOLS.md  USER.md  _issue_body.json  _parsed.json  _reconcile_report.json  leaderboard.md  pyproject.toml  registry.md
.github/: FUNDING.yml
data/: arp_kirchhoff_sim.csv  core.json  equations.json  famous_equations.json  solver_verification_report.json  submissions.json
docs/: _config.yml  certificates.html  core.html  famous.html  harvest.html  harvest_preview.html  index.html  index.md  leaderboard.html  leaderboard.md  registry.html  rising.html  submissions.html
drafts/: moltbook_posts.md
outreach-agent/: README.md  config.py  main.py  oauth.py  vault.py
submissions/: 2026-02-19.md  2026-02-20.md  2026-02-21.md  2026-02-22.md  2026-02-23.md  2026-02-24.md  2026-02-25.md  2026-03-04.md  2026-03-06.md  2026-03-07.md  2026-03-08.md  2026-03-09.md  2026-04-10.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-18.md  arp_lyapunov_and_falsifiability.md
tests/: test_pipeline.py
tools/: _add_bz_conductance.py  _add_fusion.py  _add_pr_root_guide.py  _auto_scene_eq-arp-kirchhoff-coupled-lyapunov.py  _auto_scene_eq-arp-lyapunov-stability_20260220_050315.py  _auto_scene_eq-arp-phase-lifted-complex-conductance_20260220_100318.py  _auto_scene_eq-arp-redshift_20260220_042458.py  _auto_scene_eq-curve-memory-137_20260220_070311.py  _auto_scene_eq-dyn-constants-union_20260220_060314.py  _auto_scene_eq-redshift-arp-superc_20260220_090312.py  (+46 more)
(+128 files in other folders)
